[gd_scene load_steps=4 format=3 uid="uid://cc3c30ioo11if"]

[ext_resource type="Script" uid="uid://uftqbpj0c2u8" path="res://scripts/mission/unlocked_items_panel.gd" id="1_j0tih"]
[ext_resource type="FontFile" uid="uid://d0cxd77jybrcn" path="res://fonts/lilita_one_regular.ttf" id="2_exmr5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2q5cr"]
bg_color = Color(0.12549, 0.117647, 0.235294, 0.929412)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.796078, 0.721569, 0.133333, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.45098)
shadow_size = 8

[node name="UnlockedItemsPanel" type="Control"]
process_mode = 3
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j0tih")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2q5cr")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.921569, 0.231373, 1)
theme_override_fonts/font = ExtResource("2_exmr5")
theme_override_font_sizes/font_size = 28
text = "New Items Unlocked!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemsContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.921569, 0.231373, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_exmr5")
theme_override_font_sizes/font_size = 20
text = "CONTINUE"

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
